WIP - Working on Navigation drawer -made navigation drawer come